GD_PCA_W2V_SVM_MLP_POLY
GD_PCA_W2V_SVM_MLP_POLY

--- a/gradientDescentBatchMiniBatch/004_BatchGD_LRdecay_C.ipynb
+++ b/gradientDescentBatchMiniBatch/004_BatchGD_LRdecay_C.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "004_BatchGD_LRdecay_C.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "language_info": {
       "codemirror_mode": {
@@ -27,16 +26,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/rizcodes/aiml/blob/master/004_BatchGD_LRdecay_C.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -227,11 +216,11 @@
         "cellView": "form",
         "colab_type": "code",
         "id": "F7oXwE9nv30Y",
+        "outputId": "b7a4856e-2089-448c-94e4-1f4a50363fb3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b7a4856e-2089-448c-94e4-1f4a50363fb3"
+        }
       },
       "source": [
         "#@title Run this cell to complete the setup for this Notebook\n",
@@ -401,7 +390,7 @@
         "else:\n",
         "  print (\"Please complete Id and Password cells before running setup\")"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -446,11 +435,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "5Ttnpu44IwEb",
+        "outputId": "91f48862-5091-49a1-86f4-62e45ea1d6f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        },
-        "outputId": "91f48862-5091-49a1-86f4-62e45ea1d6f8"
+        }
       },
       "source": [
         "# Load the data by using pandas read_csv()\n",
@@ -460,7 +449,7 @@
         "# Print the last 5 rows of dataframe 'data'\n",
         "print(data.tail())"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,11 +706,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "LyCs_U80IwE4",
+        "outputId": "7d448495-8e45-47cf-9050-355244a80830",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 483
-        },
-        "outputId": "7d448495-8e45-47cf-9050-355244a80830"
+        }
       },
       "source": [
         "plt.figure(figsize=(15, 8))\n",
@@ -733,7 +722,7 @@
         "plt.legend([\"l vs tsq\",\"eta = 0.1\",\"eta = 0.01\",\"eta = 0.001\",\"eta = 0.0001\"])\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -774,11 +763,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "ds8LI8XBIwE7",
+        "outputId": "90ee56a5-5bff-47d6-8306-d45cb02ed569",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 592
-        },
-        "outputId": "90ee56a5-5bff-47d6-8306-d45cb02ed569"
+        }
       },
       "source": [
         "epochs = range(0,2000)\n",
@@ -790,7 +779,7 @@
         "plt.legend([\"eta = 0.1\",\"eta = 0.01\",\"eta = 0.001\",\"eta = 0.0001\"])\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -864,11 +853,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "s0N0o3NKIwFH",
+        "outputId": "8e953527-8078-48a2-bdaf-da55eb7970df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 290
-        },
-        "outputId": "8e953527-8078-48a2-bdaf-da55eb7970df"
+        }
       },
       "source": [
         "plt.plot(range(len(errs)), errs)\n",
@@ -876,7 +865,7 @@
         "plt.ylabel(\"Error\")\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -909,16 +898,16 @@
       "metadata": {
         "colab_type": "code",
         "id": "DXumozZ-IwFL",
+        "outputId": "92410336-2b5e-4d65-85a0-e2737da35a7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "92410336-2b5e-4d65-85a0-e2737da35a7f"
+        }
       },
       "source": [
         "print(\"m = {0:.6} c = {1:.6} Error = {2:.6}\".format(m_normal, c_normal, errs[-1]))"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -934,11 +923,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "5zB7RTTOIwFM",
+        "outputId": "88a5f818-6710-4bd3-d6ab-f0f690252723",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 290
-        },
-        "outputId": "88a5f818-6710-4bd3-d6ab-f0f690252723"
+        }
       },
       "source": [
         "y = m_normal * l + c_normal \n",
@@ -949,7 +938,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1009,16 +998,16 @@
       "metadata": {
         "colab_type": "code",
         "id": "xbEAsf4cIwFS",
+        "outputId": "b0a223e9-1c27-46e9-def5-08b1478544d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b0a223e9-1c27-46e9-def5-08b1478544d2"
+        }
       },
       "source": [
         "print(\"m = {0:.6} c = {1:.6} Error = {2:.6}\".format(m_decay, c_decay, errs_decay[-1]))"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1044,11 +1033,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "WNUxY6ZyIwFV",
+        "outputId": "bcdb3a04-92cb-4cd4-f258-8ac49f9e10c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
-        },
-        "outputId": "bcdb3a04-92cb-4cd4-f258-8ac49f9e10c4"
+        }
       },
       "source": [
         "plt.plot(range(len(errs_decay)), errs_decay)\n",
@@ -1056,7 +1045,7 @@
         "plt.ylabel(\"Error\")\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1077,11 +1066,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "fRoeB71EIwFW",
+        "outputId": "64d8548d-039a-44ce-fc12-58e4a188de68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "64d8548d-039a-44ce-fc12-58e4a188de68"
+        }
       },
       "source": [
         "y = m_decay * l + c_decay \n",
@@ -1089,7 +1078,7 @@
         "plt.plot(l,y,\"r\")\n",
         "plt.show()"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1243,11 +1232,11 @@
         "colab_type": "code",
         "cellView": "form",
         "id": "nCVPS1c6fNVo",
+        "outputId": "8f150bd6-da9a-418e-87c3-81d3e95d29d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "8f150bd6-da9a-418e-87c3-81d3e95d29d1"
+        }
       },
       "source": [
         "#@title Run this cell to submit your notebook for grading { vertical-output: true }\n",
@@ -1260,7 +1249,7 @@
         "except NameError:\n",
         "  print (\"Please complete the setup first.\")"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
